--- a/static/index.html
+++ b/static/index.html
@@ -278,7 +278,7 @@
         <!-- Sidebar -->
         <!-- Sidebar -->
         <!-- Sidebar Wrapper -->
-        <div :class="[
+        <div id="app-sidebar" :class="[
                 isSidebarOpen ? 'w-full md:w-80' : 'w-0', 
                 'md:relative absolute inset-y-0 left-0 z-20',
                 'flex-shrink-0 transition-all duration-150 ease-in-out',
@@ -420,7 +420,7 @@
                                     </div>
                                     <div class="flex items-center gap-1">
                                         <!-- New Note Action -->
-                                        <button @click.stop="createNoteInFolder(null)"
+                                        <button @click.stop="createNoteInFolder(null)" @mousedown.stop
                                             class="p-1 hover:bg-slate-200 dark:hover:bg-[#4C566A] rounded-full text-slate-400 dark:text-slate-500 hover:text-blue-500 transition-colors"
                                             title="New Note">
                                             <div class="relative w-[20px] h-[20px] flex items-center justify-center">
@@ -444,7 +444,7 @@
                                         class="text-[11px] font-bold text-slate-400 dark:text-slate-500 uppercase tracking-wider">
                                         My Folders
                                     </h2>
-                                    <button @click="createFolder()"
+                                    <button @click.stop="createFolder()" @mousedown.stop
                                         class="text-slate-400 hover:text-blue-500 transition-colors" title="New Folder">
                                         <span class="material-symbols-rounded text-[18px]">create_new_folder</span>
                                     </button>
