--- a/static/index.html
+++ b/static/index.html
@@ -378,7 +378,7 @@
                                 No results found
                             </div>
                             <div v-else v-for="(result, idx) in searchResults" :key="result.note.id + '_' + idx"
-                                @click="selectSearchResult(result.note)"
+                                @click.stop="selectSearchResult(result.note)"
                                 class="p-2 rounded hover:bg-white dark:hover:bg-[#3B4252] cursor-pointer group border border-transparent hover:border-slate-200 dark:hover:border-[#434C5E] transition-all">
                                 <div class="flex items-center gap-1.5 mb-0.5 max-w-full overflow-hidden">
                                     <span class="material-symbols-rounded text-[14px] text-slate-400">description</span>
