--- a/static/index.html
+++ b/static/index.html
@@ -46,7 +46,7 @@
 
 
     <!-- Custom Styles (Loaded last to override libraries) -->
-    <link rel="stylesheet" href="/static/style.css?v=22">
+    <link rel="stylesheet" href="/static/style.css?v=23">
 
 
 
@@ -459,7 +459,7 @@
                                                 dropTargetId === 'inbox' || currentFolderId === null ? 'text-blue-500' : 'text-slate-400 dark:text-slate-500'
                                             ]" style="font-variation-settings: 'FILL' 1">home</span>
                                         <span class="text-[14px] font-medium transition-colors duration-200"
-                                            :class="currentFolderId === null ? 'text-slate-800 dark:text-white' : 'text-slate-600 dark:text-slate-400'">Inbox</span>
+                                            :class="currentFolderId === null ? 'text-slate-800 dark:text-white' : 'text-slate-600 dark:text-slate-400'">INBOX</span>
 
 
                                     </div>
@@ -483,14 +483,14 @@
                                         <button @click.stop="createFolder()" @mousedown.stop
                                             class="text-slate-400 hover:text-blue-500 transition-colors"
                                             title="New Folder">
-                                            <span class="material-symbols-rounded text-[22px]">create_new_folder</span>
+                                            <span class="material-symbols-rounded text-[25px]">create_new_folder</span>
                                         </button>
                                     </div>
                                     <button @click.stop="createNoteInFolder(null)" @mousedown.stop
                                         class="p-1 hover:bg-slate-200 dark:hover:bg-[#4C566A] rounded-full text-slate-400 dark:text-slate-500 hover:text-blue-500 transition-colors"
                                         title="New Note">
                                         <div class="relative w-[20px] h-[20px] flex items-center justify-center">
-                                            <span class="material-symbols-rounded text-[20px]">description</span>
+                                            <span class="material-symbols-rounded text-[25px]">description</span>
                                             <span
                                                 class="material-symbols-rounded text-[10px] text-amber-500 absolute -bottom-0.5 -right-0.5"
                                                 style="font-variation-settings: 'FILL' 1">bolt</span>
@@ -573,10 +573,6 @@
                                 </div>
                             </div>
                         </div>
-                        <p class="text-center py-2 text-[#2663EB] text-[10px] select-none pointer-events-none">
-                            Drag notes to folder to move
-                        </p>
-
                         <!-- Trash Folder (Fixed at bottom of list) -->
                         <div class="mt-4 pt-2 border-t border-slate-200 dark:border-[#3B4252]">
                             <div @click.stop="selectFolder(TRASH_FOLDER_ID)" @drop="handleDrop(TRASH_FOLDER_ID, $event)"
@@ -628,6 +624,9 @@
                                 </div>
                             </div>
                         </div>
+                        <p class="text-center py-2 text-[#2663EB] text-[10px] select-none pointer-events-none">
+                            Drag notes to folder to move
+                        </p>
                     </div>
 
                     <!-- Sidebar Footer -->
@@ -1591,7 +1590,7 @@
             });
         }
     </script>
-    <script src="/static/app.js?v=20" type="module"></script>
+    <script src="/static/app.js?v=21" type="module"></script>
 </body>
 
 </html>
