--- a/static/index.html
+++ b/static/index.html
@@ -474,23 +474,21 @@
                                         <div @click.stop="selectFolder(null)" @drop="handleDrop(null, $event)"
                                             @dragover.prevent @dragenter.prevent="handleDragEnter('inbox')"
                                             @dragleave.prevent="handleDragLeave('inbox')"
-                                            class="relative flex items-center justify-between px-3 py-1.5 cursor-pointer active:bg-blue-200 dark:active:bg-blue-600/30 transition-all duration-200 group rounded-lg hover:bg-slate-50 dark:hover:bg-white/5 mx-2"
+                                            class="relative flex items-center justify-between px-3 h-9 cursor-pointer active:bg-blue-200 dark:active:bg-blue-600/30 transition-all duration-200 group rounded-lg hover:bg-slate-50 dark:hover:bg-white/5 mx-2"
                                             :class="[
                                         dropTargetId === 'inbox' ? 'translate-x-1 bg-blue-50 dark:bg-blue-900/20 ring-1 ring-blue-200 dark:ring-blue-800' : '',
                                         currentFolderId === null ? 'bg-blue-100 dark:bg-blue-600/20 shadow-sm' : ''
                                     ]">
-                                            <div class="flex items-center">
-                                                <span
-                                                    class="material-symbols-rounded text-[22px] transition-colors mr-3"
+                                            <div class="flex items-center gap-3 flex-1 min-w-0">
+                                                <span class="material-symbols-rounded text-[22px] transition-colors"
                                                     :class="[
                                                 dropTargetId === 'inbox' || currentFolderId === null ? 'text-blue-500' : 'text-slate-400 dark:text-slate-500'
                                             ]" style="font-variation-settings: 'FILL' 1">home</span>
-                                                <span class="text-[14px] font-medium transition-colors duration-200"
+                                                <span
+                                                    class="text-[14px] font-medium truncate transition-colors duration-200"
                                                     :class="currentFolderId === null ? 'text-slate-800 dark:text-white' : 'text-slate-600 dark:text-slate-400'">INBOX</span>
-
-
                                             </div>
-                                            <div class="flex items-center gap-1">
+                                            <div class="flex items-center gap-1 min-h-[24px]">
 
                                                 <span
                                                     class="text-slate-500 dark:text-slate-400 font-medium text-[12px] bg-slate-200 dark:bg-[#4C566A] px-1.5 py-0.5 rounded-full min-w-[20px] text-center">{{
@@ -505,7 +503,7 @@
 
                                         <!-- Folder Item (Styled like Trash) -->
                                         <div @click.stop="selectFolder(folder.id)"
-                                            class="relative flex items-center justify-between px-3 py-1.5 cursor-pointer active:bg-blue-200 dark:active:bg-blue-600/30 transition-all duration-200 group rounded-lg hover:bg-slate-50 dark:hover:bg-white/5 mx-2"
+                                            class="relative flex items-center justify-between px-3 h-9 cursor-pointer active:bg-blue-200 dark:active:bg-blue-600/30 transition-all duration-200 group rounded-lg hover:bg-slate-50 dark:hover:bg-white/5 mx-2"
                                             :class="[
                                             dropTargetId === folder.id ? 'translate-x-1 bg-blue-50 dark:bg-blue-900/20 ring-1 ring-blue-200 dark:ring-blue-800' : '',
                                             currentFolderId === folder.id ? 'bg-blue-100 dark:bg-blue-600/20 shadow-sm' : ''
@@ -582,7 +580,7 @@
                             <div @click.stop="selectFolder(TRASH_FOLDER_ID)" @drop="handleDrop(TRASH_FOLDER_ID, $event)"
                                 @dragover.prevent @dragenter.prevent="handleDragEnter(TRASH_FOLDER_ID)"
                                 @dragleave.prevent="handleDragLeave(TRASH_FOLDER_ID)"
-                                class="relative flex items-center justify-between px-3 py-1.5 cursor-pointer active:bg-blue-200 dark:active:bg-blue-600/30 transition-all duration-200 group rounded-lg hover:bg-slate-50 dark:hover:bg-white/5 mx-2"
+                                class="relative flex items-center justify-between px-3 h-9 cursor-pointer active:bg-blue-200 dark:active:bg-blue-600/30 transition-all duration-200 group rounded-lg hover:bg-slate-50 dark:hover:bg-white/5 mx-2"
                                 :class="[
 									dropTargetId === TRASH_FOLDER_ID ? 'translate-x-1 bg-red-50 dark:bg-red-900/20 ring-1 ring-red-200 dark:ring-red-800' : '',
 									currentFolderId === TRASH_FOLDER_ID ? 'bg-blue-100 dark:bg-blue-600/20 shadow-sm' : ''
