--- a/static/index.html
+++ b/static/index.html
@@ -103,7 +103,7 @@
 </head>
 
 <body
-    class="bg-gray-100 dark:bg-[#24292F] h-screen overflow-hidden text-gray-800 dark:text-[#D8DEE9] font-sans transition-colors duration-300">
+    class="bg-gray-100 dark:bg-[#24292F] h-[100dvh] overflow-hidden overscroll-none text-gray-800 dark:text-[#D8DEE9] font-sans transition-colors duration-300">
     <div id="app" class="flex h-full">
         <!-- Splash Screen (Auto-removed when Vue mounts) -->
         <div class="fixed inset-0 z-[9999] flex flex-col items-center justify-center bg-gray-100 dark:bg-[#24292F]"
@@ -670,7 +670,8 @@
                         <button @click.stop="toggleSidebar" v-if="!isSidebarOpen"
                             class="p-2 text-slate-400 dark:text-[#D8DEE9] hover:text-slate-600 dark:hover:text-[#ECEFF4] hover:bg-slate-100 dark:hover:bg-[#4C566A] rounded-lg transition-all flex-shrink-0"
                             title="Open Sidebar">
-                            <span class="material-symbols-rounded text-[22px]">view_sidebar</span>
+                            <span class="material-symbols-rounded text-[22px]">{{ isMobile ? 'chevron_left' :
+                                'view_sidebar' }}</span>
                         </button>
                         <button @click="toggleRightPanelMode()"
                             class="p-2 text-slate-400 dark:text-[#D8DEE9] hover:text-slate-600 dark:hover:text-[#ECEFF4] hover:bg-slate-100 dark:hover:bg-[#4C566A] rounded-lg transition-all flex-shrink-0"
@@ -771,7 +772,8 @@
                                 <button @click.stop="toggleSidebar" v-if="!isSidebarOpen"
                                     class="p-1.5 text-slate-400 dark:text-[#D8DEE9] hover:text-slate-600 dark:hover:text-[#ECEFF4] hover:bg-slate-100 dark:hover:bg-[#4C566A] rounded-lg transition-all"
                                     title="Open Sidebar">
-                                    <span class="material-symbols-rounded text-[22px]">view_sidebar</span>
+                                    <span class="material-symbols-rounded text-[22px]">{{ isMobile ? 'chevron_left' :
+                                        'view_sidebar' }}</span>
                                 </button>
                                 <button v-if="selectedNote" @click="toggleRightPanelMode()"
                                     class="p-1.5 text-slate-400 dark:text-[#D8DEE9] hover:text-slate-600 dark:hover:text-[#ECEFF4] hover:bg-slate-100 dark:hover:bg-[#4C566A] rounded-lg transition-all"
