--- a/static/index.html
+++ b/static/index.html
@@ -1800,7 +1800,17 @@
                         </div>
 
 
-                    </div> <!-- Close Main Layout -->
+                    </div>
+                    
+                    <div v-if="isEditModeActive && isMobile && rightPanelMode === 'edit'"
+                         class="fixed bottom-20 left-1/2 transform -translate-x-1/2 
+                                bg-blue-500 text-white px-4 py-2 rounded-full 
+                                text-sm animate-pulse z-40 transition-all duration-300
+                                shadow-lg flex items-center gap-2">
+                        <span class="material-symbols-rounded text-16">swipe_right</span>
+                        <span>Swipe right to exit editing</span>
+                    </div>
+                    
                     <!-- Status Bar -->
                     <!-- Status Bar -->
                     <footer
