--- a/static/index.html
+++ b/static/index.html
@@ -225,7 +225,7 @@
 
 
     <!-- Custom Styles (Loaded last to override libraries) -->
-    <link rel="stylesheet" href="/static/style.css?v=24">
+    <link rel="stylesheet" href="/static/style.css?v=26">
 
 
 
@@ -349,11 +349,12 @@
         .cm-editor {
             height: 100%;
             outline: none !important;
+            font-family: 'JetBrains Mono', 'Pretendard', monospace !important;
         }
 
         .cm-scroller {
             overflow: auto !important;
-            font-family: 'Pretendard', 'JetBrains Mono', monospace !important;
+            font-family: 'JetBrains Mono', 'Pretendard', monospace !important;
         }
 
         /* CodeMirror 6 search panel is now visible */
